# py-tree-sitter

./: .gitignore  .gitmodules  README.md  pyproject.toml  setup.py
examples/: condition_a.py  condition_b.py  condition_c.py  tree-sitter-diff.py  tree-sitter.py
tree_sitter/: __init__.pyi  _binding.pyi  binding.c
tree_sitter/binding/: node.c  parser.c
