[build-system]
requires = ["setuptools>=43","tree-sitter-python==0.21.0","tree-sitter-c==0.21.4","tree-sitter-cpp==0.21.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter"
version = "0.21.3"
description = "Python bindings for the Tree-Sitter parsing library"
keywords = ["incremental", "parsing", "tree-sitter"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: C",
    "Programming Language :: Python",
    "Topic :: Software Development :: Compilers",
    "Topic :: Text Processing :: Linguistic",
    "Typing :: Typed",
]
requires-python = ">=3.8"
readme = "README.md"

[project.urls]
Homepage = "https://tree-sitter.github.io/tree-sitter/"
Source = "https://github.com/UNIST-LOFT/py-tree-sitter"

[[project.authors]]
name = "Max Brunsfeld, YoungJae Kim (FreddyYJ)"
email = "maxbrunsfeld@gmail.com, kyj1411@unist.ac.kr"

[tool.ruff]
target-version = "py38"
line-length = 100
indent-width = 4
extend-exclude = [
    ".github",
    "__pycache__",
    "tests/fixtures",
    "tree_sitter/core",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.cibuildwheel]
build-frontend = "build"
test-command = "python -munittest discover -s {project}/tests"

[tool.cibuildwheel.environment]
PYTHONWARNINGS = "ignore:::tree_sitter"
